# ComfyUI-FluxSettingsNode

./: CHANGELOG.md  FluxSettingsNode.py  README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
web/: samplerversions.js
